--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+  </style>
 </head>
 
 <body>
